# lstm-forecast

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
dashboard/: app.py
docker/: Dockerfile.api  Dockerfile.dashboard
docs/: architecture.md  index.md  model_card.md  quickstart.md
examples/: 01_univariate.py  02_multivariate.py  03_probabilistic.py  04_dynamic_probabilistic.py  05_transfer_learning.py  06_rag_and_ai.py
notebooks/: README.md  quickstart.ipynb
src/lstm_forecast/: __init__.py  cli.py  config.py  pipelines.py  utils.py
src/lstm_forecast/ai/: __init__.py  assistant.py  client.py  doc_index.py  insights.py  tuner.py
src/lstm_forecast/api/: __init__.py  main.py  schemas.py  service.py
src/lstm_forecast/api/routes/: __init__.py  chat.py  forecast.py  transfer.py
src/lstm_forecast/data/: __init__.py  features.py  loaders.py
src/lstm_forecast/evaluation/: __init__.py  metrics.py  significance.py
src/lstm_forecast/forecasting/: __init__.py  backtest.py  baselines.py  conformal.py  forecaster.py  tuning.py
src/lstm_forecast/models/: __init__.py  dataset.py  heads.py  lstm.py  trainer.py
src/lstm_forecast/rag/: __init__.py  embedder.py  retriever.py  store.py
src/lstm_forecast/transforms/: __init__.py  ops.py  pipeline.py
tests/: conftest.py  test_ai.py  test_api.py  test_data_features.py  test_forecaster.py  test_jobs.py  test_metrics_conformal_backtest.py  test_models.py  test_rag.py  test_significance.py  test_transforms.py  test_tuning.py
