[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lstm-forecast"
version = "0.1.0"
description = "Production-grade LSTM time-series forecasting for finance, enhanced with retrieval-augmented forecasting (RAG) and Claude-powered insights."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "lstm-forecast contributors" }]
keywords = [
    "time-series",
    "forecasting",
    "lstm",
    "pytorch",
    "rag",
    "finance",
    "stocks",
    "conformal-prediction",
    "anthropic",
    "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies required for the forecasting library to run.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "matplotlib>=3.7",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
# Data providers (network access at runtime).
data = ["yfinance>=0.2.40", "pandas-datareader>=0.10"]
# Retrieval-augmented forecasting vector index.
rag = ["faiss-cpu>=1.7.4"]
# Claude-powered insights, tuning and chat assistant.
ai = ["anthropic>=0.40"]
# REST API service.
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "httpx>=0.26"]
# Streamlit dashboard.
dashboard = ["streamlit>=1.31", "plotly>=5.18"]
# Developer tooling.
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.6",
    "pandas-stubs",
    "types-requests",
]
# Documentation site.
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
# Everything (convenience for local development).
all = [
    "lstm-forecast[data,rag,ai,api,dashboard,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/your-org/lstm-forecast"
Documentation = "https://github.com/your-org/lstm-forecast#readme"
Repository = "https://github.com/your-org/lstm-forecast"
Issues = "https://github.com/your-org/lstm-forecast/issues"

[project.scripts]
lstm-forecast = "lstm_forecast.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lstm_forecast"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"notebooks/*" = ["E402", "F401", "I001"]
# Plotly's API idiomatically uses dict(...) for trace/layout config.
"dashboard/*" = ["C408"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "network: tests that require network access (deselect with -m 'not network')",
    "llm: tests that require a live Anthropic API key (deselect with -m 'not llm')",
    "slow: slow tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["lstm_forecast"]
omit = ["*/dashboard/*", "*/api/main.py"]
